--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-## OS generated files
-*.DS_Store
-._*
-
-## Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
+*.png
+*.csv
