--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==1.2.4
+numpy==1.19.5
 PuLP==2.1
-matplotlib==3.4.2
-tqdm==4.61.0
-numpy==1.20.2
 lightgbm==3.2.1
+tqdm==4.62.2
+pandas==1.2.4
 seaborn==0.11.1
+matplotlib==3.4.2
+casadi==3.5.5.post2
 scikit_learn==0.24.2
